--- a/TestUe.uproject
+++ b/TestUe.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "TestUe",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"GameplayAbilities"
+			]
 		}
 	],
 	"Plugins": [
@@ -433,6 +436,10 @@
 		{
 			"Name": "GitSourceControl",
 			"Enabled": false
+		},
+		{
+			"Name": "GameplayAbilities",
+			"Enabled": true
 		}
 	]
 }
