--- a/tools/package.json
+++ b/tools/package.json
@@ -4,12 +4,23 @@
   "description": "",
   "main": "out/julpfile.js",
   "scripts": {
-    "test": "jest",
-    "build": "tsc",
-    "build:watch": "tsc -w",
-    "test:watch": "jest --watch",
-    "lint": "eslint --ext .ts,.tsx ."
+    "build": "gulp build",
+    "clean": "gulp clean",
+    "tool:test": "jest",
+    "tool:build": "tsc",
+    "tool:build:watch": "tsc -w",
+    "tool:test:watch": "jest --watch",
+    "tool:lint": "eslint --ext .ts,.tsx ."
   },
   "author": "lovebird",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/gulp": "^4.0.17",
+    "@types/jest": "^29.5.14",
+    "gulp": "^5.0.0",
+    "gulplog": "^2.2.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.7.2"
+  }
 }
