完善ptr相关的测试

--- a/tools/package.json
+++ b/tools/package.json
@@ -5,6 +5,8 @@
   "main": "out/julpfile.js",
   "scripts": {
     "build": "gulp build",
+    "test": "gulp test",
+    "test:watch": "gulp test:watch",
     "clean": "gulp clean",
     "tool:test": "jest",
     "tool:build": "tsc",
