加入自定义资源编辑器的测试

--- a/TestUe.uproject
+++ b/TestUe.uproject
@@ -14,7 +14,7 @@
     },
     {
       "Name": "AutomationController",
-      "Type": "Developer",
+      "Type": "DeveloperTool",
       "LoadingPhase": "Default"
     }
   ],
