--- a/tools/package.json
+++ b/tools/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "out/julpfile.js",
   "scripts": {
+    "set-guid": "gulp set-guid",
+    "build-engine": "gulp build-engine",
     "build": "gulp build",
     "test": "gulp test",
     "test:watch": "gulp test:watch",
@@ -19,10 +21,12 @@
   "devDependencies": {
     "@types/gulp": "^4.0.17",
     "@types/jest": "^29.5.14",
+    "@types/winreg": "^1.2.36",
     "gulp": "^5.0.0",
     "gulplog": "^2.2.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "winreg": "^1.2.5"
   }
 }
