加入独立测试程序

--- a/.gitignore
+++ b/.gitignore
@@ -23,10 +23,13 @@ Saved/
 # Ignore project-specific files
 .idea/
 .vs/
+.vscode/
+*.code-workspace
 *.xcodeproj/
 *.xcworkspace/
 *.sln
 *.vsconfig
+*.ignore
 
 # Ignore log files
 *.log
