优化自动测试逻辑

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,12 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=2659E23F4181311867DC348ECA0EAE67
+
+[/Script/Engine.AssetManagerSettings]
++PrimaryAssetTypesToScan=(PrimaryAssetType="MyObject",AssetBaseClass="/Script/TestUe.MyObject",bHasBlueprintClasses=True,bIsEditorOnly=False,Directories=((Path="/Game/MyTest")),SpecificAssets=,Rules=(Priority=-1,ChunkId=-1,bApplyRecursively=True,CookRule=Unknown))
+bOnlyCookProductionAssets=False
+bShouldManagerDetermineTypeAndName=False
+bShouldGuessTypeAndNameInEditor=True
+bShouldAcquireMissingChunksOnLoad=False
+bShouldWarnAboutInvalidAssets=True
+MetaDataTagsForAssetRegistry=()
