重构，严格区分Editor和Game

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/TestGas/Maps/TestUe.TestUe
+EditorStartupMap=/Game/TestGas/Maps/TestUe.TestUe
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
