--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -13,4 +13,5 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="GamePlayCue.OnFire",DevComment="")
 +GameplayTagList=(Tag="Status.OnFire",DevComment="")
 +GameplayTagList=(Tag="Weapon.Primary",DevComment="")
-
++GameplayTagList=(Tag="Test.TagA",DevComment="")
++GameplayTagList=(Tag="Test.TagA.SubTagB",DevComment="")
