加入DataRegistry相关测试

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,4 +1,5 @@
 
+
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=2659E23F4181311867DC348ECA0EAE67
 
@@ -10,3 +11,9 @@ bShouldGuessTypeAndNameInEditor=True
 bShouldAcquireMissingChunksOnLoad=False
 bShouldWarnAboutInvalidAssets=True
 MetaDataTagsForAssetRegistry=()
+
+[/Script/DataRegistry.DataRegistrySettings]
++DirectoriesToScan=(Path="/Game/TestDataRegistry")
+bInitializeAllLoadedRegistries=False
+bIgnoreMissingCookedAssetRegistryData=False
+
