--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -10,8 +10,12 @@ bDynamicReplication=False
 InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
++GameplayTagList=(Tag="DataRegistry.Test",DevComment="")
++GameplayTagList=(Tag="DataRegistry.Test.Bar",DevComment="")
++GameplayTagList=(Tag="DataRegistry.Test.Foo",DevComment="")
 +GameplayTagList=(Tag="GamePlayCue.OnFire",DevComment="")
 +GameplayTagList=(Tag="Status.OnFire",DevComment="")
-+GameplayTagList=(Tag="Weapon.Primary",DevComment="")
 +GameplayTagList=(Tag="Test.TagA",DevComment="")
 +GameplayTagList=(Tag="Test.TagA.SubTagB",DevComment="")
++GameplayTagList=(Tag="Weapon.Primary",DevComment="")
+
