支持快速打开Gameplay Tag Manager

--- a/Plugins/EditorHelper/EditorHelper.uplugin
+++ b/Plugins/EditorHelper/EditorHelper.uplugin
@@ -19,5 +19,15 @@
       "Type": "Editor",
       "LoadingPhase": "Default"
     }
+  ],
+  "Plugins": [
+    {
+      "Name": "AssetManagerEditor",
+      "Enabled": true
+    },
+    {
+      "Name": "GameplayTagsEditor",
+      "Enabled": true
+    }
   ]
 }
