将编辑器测试转为CQTest格式

--- a/TestUe.uproject
+++ b/TestUe.uproject
@@ -23,9 +23,13 @@
 			"LoadingPhase": "Default"
 		}
 	],
-	"Plugins": [		
+	"Plugins": [
 		{
 			"Name": "GameplayAbilities",
+			"Enabled": true
+		},
+		{
+			"Name": "CQTest",
 			"Enabled": true
 		}
 	]
